<resources>
    <string name="app_name">HanLiao-CS5520-Android</string>
    <string name="about_me">About Me</string>
    <string name="quic_calc">QUIC CALC</string>
    <string name="defaultExpression">1+2</string>
    <string name="prime_computation">Prime Computation</string>
    <string name="contact_collector">Contact Collector</string>
    <string name="find_primes">Find Primes</string>
    <string name="terminate_search">Terminate Search</string>
    <string name="pacifier_switch">Pacifier Switch</string>
    <string name="tobecomputed">--</string>
    <string name="latest_prime">Latest Prime:</string>
    <string name="current_number">Current Number:</string>
</resources>